# codexmon

./: .env.example  .gitignore  Makefile  README.md  agent.md  pyproject.toml
agent-docs/: README.md
agent-docs/decisions/: initial-judgment.md
agent-docs/planning/: execution-plan.md  worklist.md
agent-docs/status/: current-status.md  progress-monitor.html  progress.json
agent-docs/validation/: b1-repository-baseline-validation.md  b2-run-ledger-validation.md  b3-worktree-allocator-validation.md  b4-codex-adapter-validation.md  b5-failure-signal-validation.md  b6-telegram-notifier-validation.md  b7-pr-handoff-validation.md  code-start-gate-validation.md  initial-docs-validation.md  m5-supervisor-runtime-validation.md  m6-daemon-runtime-validation.md  m7-crash-recovery-validation.md  m8-service-packaging-validation.md  m9-progress-monitor-validation.md  planning-closure-validation.md  stage-c-acceptance-precheck.md  stage-c-acceptance-validation.md
docs/: ACCEPTANCE_CHECKLIST.md  ARCHITECTURE_OVERVIEW.md  EXECUTION_PLAN.md  FOUNDATION.md  IMPLEMENTATION_SLICE.md  POLICY_BASELINE.md  SERVICE_RUNBOOK.md  STATE_MACHINE.md
ops/systemd/: codexmon-daemon.env.example  codexmon-daemon.service
scripts/: run-codexmon-daemon.sh
src/codexmon/: __init__.py  __main__.py  (+13 more)
tests/: test_acceptance_validation.py  test_approval_policy.py  test_cli.py  test_codex_adapter.py  test_daemon_runtime.py  test_failure_policy.py  test_ledger.py  test_orchestrator.py  test_packaging_assets.py  test_pr_handoff.py  test_progress_monitor.py  test_telegram_notifier.py  test_workspace.py
